--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git@ssh.dev.azure.com:v3/proyectos-iii-broker/Proyectos%20III%20Broker/api"
