--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
   "name": "api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Proyectos III Broker API",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon"
+    "start": "node dist/server.js"
   },
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git@ssh.dev.azure.com:v3/proyectos-iii-broker/Proyectos%20III%20Broker/api"
+    "url": "git@github.com:singiamtel/xtox-back.git"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "connect-datadog": "^0.0.9",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-slow-down": "^1.4.0",
-    "helmet": "^4.5.0",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.1",
+    "express-slow-down": "^1.5.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.6",
+    "mongodb": "^4.10.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "@tsconfig/node17": "^1.0.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/express-slow-down": "^1.3.2",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.7.23",
+    "typescript": "^4.8.3"
   }
 }
