--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Proyectos III Broker API",
   "main": "server.js",
   "scripts": {
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+	"build": "tsc"
   },
   "type": "module",
   "repository": {
